--- a/examples/npm/package.json
+++ b/examples/npm/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "oxydemeton",
   "license": "ISC",
   "dependencies": {
     "random": "^4.1.0"
-  }
+  },
+  "type": "module"
 }
