--- a/opencredit.jsonc
+++ b/opencredit.jsonc
@@ -1,6 +1,10 @@
 {
     "output": "CREDITS.md",                     //Output File in Markdown
     "exclude": [],                              //Directories to exclude
-    "json_report": "opencredit.report.json",     //Optional: json file with detailed informations
-    "allow_api_calls": false                    //If Deno is allowed to called apis to get additional information about packages
+    "json_report": "opencredit.report.json",    //Optional: json file with detailed information
+    "allow_api_calls": false,                   //If Deno is allowed to called apis to get additional information about packages
+    "managers": [                               //List of all managers in use. If not set all will be used. Names are case insensitive
+        "NPM", 
+        "cargo"
+    ]
 }
