--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,6 +2,10 @@
     "imports": {
       "std/": "https://deno.land/std@0.179.0/"
     },
+    "compilerOptions": {
+      "checkJs": true,
+      "noImplicitAny": false
+    },
     "lint": {
       "files": {
         "include": ["src/"]
@@ -10,6 +14,15 @@
         "tags": ["recommended"],
         "include": ["ban-untagged-todo"],
         "exclude": ["no-unused-vars", "no-explicit-any"]
+      }
+    },
+    "fmt": {
+      "files": {
+        "include": ["src/"]
+      },
+      "options": {
+        "semiColons": false,
+        "indentWidth": 4
       }
     }
 }
