added json report

--- a/examples/cargo/opencredit.jsonc
+++ b/examples/cargo/opencredit.jsonc
@@ -1,1 +1,7 @@
-{"output":"CREDITS.md","exclude":[],"allow_api_calls":false, "managers": ["cargo"]}
+{
+  "output": "CREDITS.md",
+  "exclude": [],
+  "allow_api_calls": false,
+  "managers": ["cargo"],
+  "json_report": "credits.json"
+}
