add deno manager

--- a/opencredit.jsonc
+++ b/opencredit.jsonc
@@ -1,10 +1,11 @@
 {
-    "output": "CREDITS.md",                     //Output File in Markdown
-    "exclude": [],                              //Directories to exclude
-    "json_report": "opencredit.report.json",    //Optional: json file with detailed information
-    "allow_api_calls": false,                   //If Deno is allowed to called apis to get additional information about packages
-    "managers": [                               //List of all managers in use. If not set all will be used. Names are case insensitive
-        "NPM", 
-        "cargo"
+    "output": "CREDITS.md", //Output File in Markdown
+    "exclude": [], //Directories to exclude
+    "json_report": "opencredit.report.json", //Optional: json file with detailed information
+    "allow_api_calls": false, //If Deno is allowed to called apis to get additional information about packages
+    "managers": [ //List of all managers in use. If not set all will be used. Names are case insensitive
+        "NPM",
+        "cargo",
+        "deno"
     ]
 }
