added --managers parameter

--- a/examples/deno/opencredit.jsonc
+++ b/examples/deno/opencredit.jsonc
@@ -1,5 +1,8 @@
 {
     "output": "CREDITS.md",
     "exclude": [],
-    "allow_api_calls": false
+    "allow_api_calls": false,
+    "managers": [
+        "npm"
+    ]
 }
