--- a/opencredit.jsonc
+++ b/opencredit.jsonc
@@ -4,8 +4,7 @@
     "json_report": "opencredit.report.json", //Optional: json file with detailed information
     "allow_api_calls": true, //If Deno is allowed to called apis to get additional information about packages
     "managers": [ //List of all managers in use. If not set all will be used. Names are case insensitive
-        "NPM",
-        "cargo",
         "deno"
-    ]
+    ],
+    "cache": false
 }
