--- a/examples/deno/opencredit.jsonc
+++ b/examples/deno/opencredit.jsonc
@@ -1,7 +1,7 @@
 {
     "output": "CREDITS.md",
     "exclude": [],
-    "allow_api_calls": false,
+    "allow_api_calls": true,
     "managers": [
         "deno"
     ]
