--- a/examples/cargo/opencredit.jsonc
+++ b/examples/cargo/opencredit.jsonc
@@ -3,5 +3,6 @@
   "exclude": [],
   "allow_api_calls": true,
   "managers": ["cargo"],
-  "json_report": "credits.json"
+  "json_report": "credits.json",
+  "cache": false
 }
