--- a/examples/credit-yaml/credit.yaml
+++ b/examples/credit-yaml/credit.yaml
@@ -5,4 +5,4 @@ version: 1.0.0
 homepage: https://github.com/oxydemeton/open-credit
 repo: https://github.com/oxydemeton/open-credit
 documentation: https://github.com/oxydemeton/open-credit
-license: MIT
+license: Apache License 2.0
