--- a/opencredit.jsonc
+++ b/opencredit.jsonc
@@ -1,4 +1,5 @@
 {
+    "$schema": "./schema.json",
     "output": "CREDITS.md", //Output File in Markdown
     "exclude": ["./examples", "./tests"], //Directories to exclude
     "json_report": "opencredit.report.json", //Optional: json file with detailed information
